Changed the HTML

--- a/habitstation/templates/about.html
+++ b/habitstation/templates/about.html
@@ -17,12 +17,13 @@
       <a class="nav-item is-tab is-active">Home</a>
       <a class="nav-item is-tab">Login</a>
       <a class="nav-item is-tab">Register</a>
-      <a class="nav-item is-tab" href="/about">About</a>
-      <a class="nav-item is-tab" href ="/contact">Contact</a>
+      <a class="nav-item is-tab">About</a>
+      <a class="nav-item is-tab">Contact</a>
       <a class="nav-item is-tab">Blog</a>
     </div>
   </div>
 </nav>
 		</header>
+    <h1>About</h1>
 	</body>	
 </html>
