--- a/habitstation/templates/index.html
+++ b/habitstation/templates/index.html
@@ -1,28 +1,4 @@
-<html>
-	<head>
-		<title>HabitStation</title>
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.1.2/css/bulma.css" />
-	</head>
-	<body>
-		<header>
-
-  <nav class="nav has-shadow">
-  <div class="container">
-  	<div class="nav-left">
-    <a class="nav-item is-brand" href="#">
-      <h1 class="title is-1">Habit Station</h1>
-    </a>
-  </div>
-    <div class="nav-right">
-      <a class="nav-item is-tab is-active">Home</a>
-      <a class="nav-item is-tab">Login</a>
-      <a class="nav-item is-tab">Register</a>
-      <a class="nav-item is-tab" href="/about">About</a>
-      <a class="nav-item is-tab" href ="/contact">Contact</a>
-      <a class="nav-item is-tab">Blog</a>
-    </div>
-  </div>
-</nav>
-		</header>
-	</body>	
-</html>
+{% extends 'base.html' %}
+{% block content %}
+    <h1>Home</h1>
+{% endblock %}
