--- a/habitstation/templates/index.html
+++ b/habitstation/templates/index.html
@@ -1,4 +1,20 @@
 {% extends 'base.html' %}
 {% block content %}
-    <h1>Home</h1>
+ <div class="hero-body">
+    <div class="container">
+      <div class="columns is-vcentered">
+        <div class="column">
+          <p class="title">
+            Home
+          </p>
+          <p class="subtitle">
+            Everything you need to <strong>create a habit</strong> with any effort
+          </p>
+        </div>
+        <div class="column is-narrow">
+
+        </div>
+      </div>
+    </div>
+  </div>
 {% endblock %}
