--- a/habitstation/templates/base.html
+++ b/habitstation/templates/base.html
@@ -15,7 +15,7 @@
   <div class="container">
   	<div class="nav-left">
     <a class="nav-item is-brand" href="/">
-      <h1 class="title is-1">Habit Station</h1>
+      <h1 class="title is-3">Habit Station</h1>
     </a>
   </div>
     <div class="nav-right">
@@ -27,12 +27,54 @@
       <a class="nav-item is-tab">Blog</a>
     </div>
   </div>
-</nav>
+</nav>    
+</div>
+</div>
+</section>
+
+
       {% block content %}
       {% endblock %}
-</div>
-</div>
-    </section>
+
+    <section id="newsletter" class="hero is-primary">
+  <div class="hero-body">
+    <div class="container">
+      <!-- Begin MailChimp Signup Form -->
+      <div id="mc_embed_signup" class="columns is-vcentered">
+        <div class="column is-one-third is-left">
+          <p class="title">Habit Station <strong>Newsletter</strong></p>
+          <p class="subtitle">Get notified when new habits arrive!</p>
+        </div>
+
+        <div class="column">
+          <form action="https://bbxdesign.us3.list-manage.com/subscribe/post?u=b43b93fe633f0560b2a72a69c&amp;id=52585e8803" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+            <div id="mc_embed_signup_scroll">
+              <div class="control is-grouped">
+                <div class="control has-icon is-expanded">
+                  <input type="email" value="" name="EMAIL" class="input is-flat required email" id="mce-EMAIL" placeholder="email address" required>
+                  <i class="fa fa-envelope"></i>
+                </div>
+                <div class="control">
+                  <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button is-white is-outlined">
+                </div>
+              </div>
+              <div id="mce-responses">
+                <div class="notification is-danger response" id="mce-error-response" style="display:none"></div>
+                <div class="notification is-success response" id="mce-success-response" style="display:none"></div>
+              </div>
+              <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+              <div style="position: absolute; left: -5000px;" aria-hidden="true">
+                <input type="text" name="b_b43b93fe633f0560b2a72a69c_52585e8803" tabindex="-1" value="">
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+      <!--End mc_embed_signup-->
+    </div>
+  </div>
+</section>
+
 
 <footer class="footer">
   <div class="container">
