--- a/habitstation/templates/base.html
+++ b/habitstation/templates/base.html
@@ -18,7 +18,15 @@
       <h1 class="title is-3">Habit Station</h1>
     </a>
   </div>
-    <div class="nav-right">
+  
+  <span class="nav-toggle">
+	<span></span>
+    <span></span>
+    <span></span>
+  </span>
+
+  
+    <div class="nav-right nav-menu">
       <a class="nav-item is-tab is-active" href="/">Home</a>
       <a class="nav-item is-tab">Login</a>
       <a class="nav-item is-tab">Register</a>
