--- a/habitstation/templates/base.html
+++ b/habitstation/templates/base.html
@@ -28,7 +28,11 @@
   
     <div class="nav-right nav-menu">
       <a class="nav-item is-tab is-active" href="/">Home</a>
-      <a class="nav-item is-tab">Login</a>
+      {% if user.is_authenticated %}
+      <a class="nav-item is-tab" href="/logout">Logout</a>
+      {% else %}
+      <a class="nav-item is-tab" href="/login">Login</a>
+      {% endif %}
       <a class="nav-item is-tab">Register</a>
       <a class="nav-item is-tab" href="/about">About</a>
       <a class="nav-item is-tab" href ="/contact">Contact</a>
