--- a/habitstation/templates/index.html
+++ b/habitstation/templates/index.html
@@ -15,21 +15,36 @@
           </p>
         </div>
         <div class="column">
-<label class="label">Name</label>
+          <form action="{% url 'register' %}" method="post" name="Signup_Form" class="form-signup" role="form">
+            {% csrf_token %}
+<label class="label">First Name</label>
 <p class="control">
-  <input class="input" type="text" placeholder="Joe Blogs">
+  <input class="input" name="first_name" id="first_name" type="text" placeholder="Joe">
+</p>
+<label class="label">Last Name</label>
+<p class="control">
+  <input class="input" name="last_name" id="last_name"type="text" placeholder="Blogs">
 </p>
 <label class="label">Username</label>
 <p class="control has-icon has-icon-right">
-  <input class="input" type="text" placeholder="jblogs1">
+  <input class="input" name="username" id="username" type="text" placeholder="jblogs1">
 </p>
 <label class="label">Email</label>
 <p class="control has-icon has-icon-right">
-  <input class="input" type="text" placeholder="jblogs@habits.com">
+  <input class="input" name="email" id="email" type="text" placeholder="jblogs@habits.com">
+</p>
+<label class="label">Password</label>
+<p class="control has-icon has-icon-right">
+  <input class="input" name="password" id="password" type="password" placeholder="........">
+</p>
+<label class="label">Confirm Password</label>
+<p class="control has-icon has-icon-right">
+  <input class="input" name="password" id="password" type="password" placeholder="........">
 </p>
 <p class="control">
   <button class="button is-primary">Submit</button>
 </p>
+</form>
         </div>
       </div>
     </div>
