fixed home redirect and list habits

--- a/habitstation/templates/base.html
+++ b/habitstation/templates/base.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>HabitStation</title>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.1.2/css/bulma.css" />
+    <script src="https://use.fontawesome.com/206908b29c.js"></script>
 	</head>
 	<body class="layout-documentation page-grid">
     <section class="hero is-primary">
