--- a/habitstation/templates/habits.html
+++ b/habitstation/templates/habits.html
@@ -100,7 +100,7 @@ $(document).ready(function(){
           <a class="level-item">
             <span class="icon is-small"><i class="fa fa-retweet"></i></span>
           </a>
-          <a class="level-item">
+          <a href="/del_habit/?habit={{ h.id }}" class="level-item">
             <span class="icon is-small"><i class="fa fa-heart"></i></span>
           </a>
         </div>
