--- a/habitstation/templates/habits.html
+++ b/habitstation/templates/habits.html
@@ -28,14 +28,13 @@ $(document).ready(function(){
  	
     <div class="container">
       <div class="columns is-vcentered">
-        <div class="column">
+        <div class="column is-one-third">
           <p class="title">
             Welcome Back {{ user.username }}
           </p>
           <p class="subtitle">
             Time to add some <strong>habits!</strong>
           </p>
-          <a class="button is-danger">Add Habit</a>
           <div class="modal">
   <div class="modal-background"></div>
   <div class="modal-container">
@@ -58,9 +57,9 @@ $(document).ready(function(){
    <input class="input" type="text" name="habit_desc" id="habit_desc">
 </p>
 
-<label class="label">Habit Frequency</label>
+<label class="label">Habit Frequency (number)</label>
 <p class="control has-icon has-icon-right">
-   <input class="input" type="text" name="habit_freq" id="habit_freq">
+   <input class="input" type="number" name="habit_freq" id="habit_freq">
 </p>
 
 <p class="control">
@@ -73,6 +72,9 @@ $(document).ready(function(){
   </div>
   <button class="modal-close"></button>
 </div>
+        </div>
+        <div class="column is-1">
+          <a class="button is-danger">Add Habit</a>
         </div>
         <div class="column">
           {% if habs %}
@@ -101,7 +103,7 @@ $(document).ready(function(){
             <span class="icon is-small"><i class="fa fa-retweet"></i></span>
           </a>
           <a href="/del_habit/?habit={{ h.id }}" class="level-item">
-            <span class="icon is-small"><i class="fa fa-heart"></i></span>
+            <span class="icon is-small"><i class="fa fa-trash" aria-hidden="true"></i></span>
           </a>
         </div>
       </nav>
